...
                    style="@style/MoviePoster"
                    android:layout_height="240dp"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/fav_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top"
                    android:layout_margin="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
...
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/movieDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:visibility="visible">
...
