<resources>
    <string name="movies_screen_title">Movies</string>
    <string name="fav_movies_screen_title">Favorites</string>
    <string name="movie_details_screen_title">Movie Details</string>
    <string name="movie_details_summary">Summary</string>
    <string name="movie_details_cast">Cast</string>
    <string name="movie_details_director">Director</string>
    <string name="movie_details_year">Year</string>

    <!-- Animations -->
    <string name="movie_transition_poster">%d_moviePosterTransition</string>
    <string name="movie_transition_favorite_icon">%d_movieFavIconPosterTransition</string>
</resources>
