<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:background="@color/colorAccent"
        tools:itemCount="5"
        tools:listitem="@layout/row_movie" />

    <ImageView
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="100dp"
        android:scaleType="center"
        android:src="@drawable/ic_movies_placeholder"
        tools:ignore="ContentDescription" />

</FrameLayout>
